load("@rules_java//java:java_import.bzl", "java_import")
load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_plugin.bzl", "java_plugin")
load("@rules_jvm_external//:defs.bzl", "java_export")

package(default_visibility = ["//visibility:public"])

DEPLOYMENT_DEPS = [
    "@maven//:io_quarkus_quarkus_arc_deployment",
    "@maven//:io_quarkus_quarkus_core_deployment",
]

java_plugin(
    name = "quarkus_processor",
    generates_api = False,
    processor_class = "io.quarkus.annotation.processor.ExtensionAnnotationProcessor",
    deps = ["@maven//:io_quarkus_quarkus_extension_processor"],
)

java_library(
    name = "deployment",
    srcs = glob(["src/main/java/**/*.java"]),
    plugins = [":quarkus_processor"],
    # quarkus-core is a compile-only dep (the generated $$accessor references
    # @io.quarkus.Generated); not a published POM dependency.
    deps = DEPLOYMENT_DEPS + [
        "//ext/runtime:runtime_lib",
        "@maven//:io_quarkus_quarkus_core",
    ],
)

filegroup(
    name = "deployment_jar",
    srcs = [":deployment"],
    tags = ["manual"],
)

java_import(
    name = "deployment_publish_lib",
    jars = [":deployment_jar"],
    tags = ["manual"],
)

java_export(
    name = "deployment_publish",
    maven_coordinates = "com.example.smoke:smoke-extension-deployment:1.0.0",
    tags = ["manual"],
    exports = [
        ":deployment_publish_lib",
        "//ext/runtime:runtime_publish",
    ] + DEPLOYMENT_DEPS,
)
