load("@rules_java//java:java_library.bzl", "java_library")

java_library(
    name = "todo-service",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//libs/todo-model",
        "@maven//:io_quarkus_quarkus_arc",
        "@maven//:jakarta_enterprise_jakarta_enterprise_cdi_api",
    ],
)
